----------------------------------------------------------------------
 OmegaT 2.5.1
----------------------------------------------------------------------
   8 Enhancements
   1 Bug fix
   2 Localisation updates
----------------------------------------------------------------------
2.5.1 vs. 2.5.0 update 5


  Implemented requests:
  
  - Add patterns for text that should be removed and validate
  http://sourceforge.net/support/tracker.php?aid=3477099

  - User-defined tags
  http://sourceforge.net/support/tracker.php?aid=1599334

  - Validate Java MessageFormat pattern tags ({0} etc.)
  http://sourceforge.net/support/tracker.php?aid=3477045

  - Render tags in different color in editor
  http://sourceforge.net/support/tracker.php?aid=2120329

  - Add "date" & "time" to translated file name pattern
  http://sourceforge.net/support/tracker.php?aid=3346155

  - targetLocale for use with DotNetNuke ResX
  http://sourceforge.net/support/tracker.php?aid=3330974

  - Remove all tags
  http://sourceforge.net/support/tracker.php?aid=3481683

  Other enhancements:

  - Insert Source Tags inserts all relevant tags (custom, java, printf), 
not only OmegaT-tags
  
  Bug fixes:

  - Camtasia filter: <Line> is incorrectly added as src segment
  http://sourceforge.net/support/tracker.php?aid=3481602

  Localisation updates:

  - Dutch localisation updated to 2.5.0 update 5 (UI, readme, documentation)
  - Italian localisation updated to 2.5.0 update 5 (UI, Instant Start, readme)

----------------------------------------------------------------------
 OmegaT 2.5.0 update 5
----------------------------------------------------------------------
   9 Enhancements
   5 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
2.5.0 update 5 vs. 2.5.0 update 4


  Implemented requests:

  - Filter for Camtasia Studio for Windows
  http://sourceforge.net/support/tracker.php?aid=3457285

  - TBX entry/concept level note